# hydra

./: .coverage  .gitattributes  .gitignore  .mcp.json  .sops.yaml  CLAUDE.md  CONSTITUTION.yaml  CONSTITUTION.yaml.template  DEPLOYMENT-CHECKLIST.md  LEARNINGS.md  README.md  ROADMAP.md  STATE.json  STRUCTURE.md  VISION.md  WORK-HARNESS.json  grafana-ai-dashboard.json  import_knowledge.ps1  import_knowledge_to_letta.py  mkdocs.yml  n8n_auto_recovery_workflow.json  page_fix.tsx  patch_discord_webhook.py  patch_gpu_metrics.py  patch_inference_tracking.py  pyproject.toml  requirements-alerts.txt  requirements-health.txt  requirements.txt  storage_endpoint.py  update_api.py
.claude/: REFACTORING-CHANGELOG.md  knowledge-index.md  settings.local.json
.github/: CODEOWNERS  dependabot.yml
Empire of Broken Queens/: ATTRACTION-PROFILE-ANALYSIS.md  EXECUTION-STRATEGY.md  Empire of Broken Queens – The Definitive Master Document (Expanded Edition with Appendices – December 08, 2025).md  Empire of Broken Queens – The Definitive Master Document (Maximum Depth Edition with Expanded Appendices – December 08,.md  Empire of Broken Queens – The Offline Master Document (December 08, 2025).md  GAME-DESIGN-SYNTHESIS.md  HYDRA-COMPUTE-UPGRADE-ANALYSIS.md  HYDRA-CONTROL-PLANE-ANALYSIS.md  HYDRA-SCHEMA-ARCHITECTURE.md  IMPLEMENTATION-ROADMAP.md  KUBERNETES-NIXOS-ARCHITECTURE.md  Mochi Video Workflows – The Heart of Every Blissful Surrender Scene.md  QUALITY-SCORING-PIPELINE.md  QUEEN-PHYSICAL-DATABASE.md  SoulForge Engine v13 – The Infinite Queen Generator (Full Mechanics Breakdown).md
comfyui-workflows/: README.md  flux-simple.json  sdxl-basic.json
config/: alertmanager.yml  desired-state.yaml  n8n-auto-remediation-workflow.json  n8n-container-alert-workflow.json
docker/: Dockerfile.alerts  Dockerfile.health  Dockerfile.hydra-tools  Dockerfile.hydra-tools-deploy
docker-compose/: .env.example  download-stack.yml  healthchecks-additions.yml  healthchecks.yml  hydra-services.yml  hydra-stack.yml  hydra-tools-api.yml  hydra-tools-deploy.yml  media-healthchecks.yml  media-stack.yml  redis-hardened.yml  stt-service.yml  voice-interface.yml  wakeword-service.yml
docs/: API.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CREDENTIAL_SETUP_GUIDE.md  HYDRA-SYSTEM-ARCHITECTURE-V3.md  HYDRA-ULTRATHINK-ANALYSIS-V3.1.md  HYDRA-UNIFIED-CONTROL-PLANE-V4.md  RESOURCE-ALLOCATION-POLICY.md  TABBYAPI_STABILITY_ANALYSIS.md  TRANSPARENCY-AND-CONTROL-FRAMEWORK.md  TYPHON-COMMAND-ARCHITECTURE-V2.md  UNIFIED-CONTROL-PLANE-ARCHITECTURE.md  autonomous-steward-directives.md  container-healthcheck-audit.md  deployment-guide.md  phase-11-self-improvement.md  phase-12-character-consistency.md
homeassistant/: README.md  automations.yaml  configuration.yaml  lovelace-dashboard.yaml  shell_commands.yaml
knowledge/: agent-frameworks-2025.md  automation.md  bleeding-edge-synthesis-dec2025.md  creative-stack.md  databases.md  home-assistant-setup.md  inference-stack.md  infrastructure.md  knowledge-ingest.md  media-stack.md  models.md  network-segmentation.md  node-specs-live.md  observability.md  sandbox-evaluation.md  speculative-decoding.md  troubleshooting.md  unraid-api-integration.md
mcp/: .mcp-windows.json  README.md  claude_code_mcp_config.json  gpu_endpoint_update.py  hydra_mcp_proxy.py  mcp_header_fix.py  mcp_server.py  mcp_server_live.py  native-mcp-servers.md
mcp-servers/: claude-desktop-config.json
mcp-servers/hydra-cluster/: README.md  pyproject.toml  server.py
memory/: episodic.json  semantic.json
memory_v2/: core.yaml  decisions.yaml  patterns.yaml  user.yaml  working.yaml
n8n-workflows/: cluster-health-check.json  container-auto-restart.json  daily-health-digest.json  daily-research-digest.json  database-backup.json  document-ingestion.json  health-digest.json  letta-memory-update.json  model-change-notifier.json  model-performance-monitor.json
nixos-modules/: comfyui.nix  dns-adguard.nix  firewall.nix  gpu-power.nix  network-adguard.nix  ollama-dual.nix  ollama.nix  promtail.nix  tabbyapi-package.nix  tabbyapi.nix
plans/: ARCHITECTURE-BLEEDING-EDGE-ANALYSIS.md  AUTONOMOUS-AGENT-PRIORITIES-2025-12-18.md  AUTONOMOUS-IMPROVEMENTS-MASTER.md  AUTONOMOUS-TASK-LIST-2025-12-17.md  AUTONOMOUS-TEST-FINDINGS-2025-12-17.md  AUTONOMOUS-WORK-BACKLOG-2025-12-18.md  AUTONOMOUS-WORK-QUEUE-2025-12-18.md  BLEEDING-EDGE-AI-ANALYSIS.md  BUILD-LIST-2025-12-16.md  HOMEPAGE-INTEGRATION-SPEC.md  HYDRA-MASTER-PLAN-2025-12-16.md  HYDRA-STRATEGIC-PLAN-2025-Q4.md  IMPLEMENTATION-GUIDE-MULTI-AGENT.md  MASTER-AUTONOMOUS-WORK-PLAN-2025-12-17.md  MEMORY_ARCHITECTURE.md  NEXT-PHASE-2025-12-16.md  OVERNIGHT-AUTONOMOUS-2025-12-16.md  SELF-IMPROVING-AI-IMPLEMENTATION-2025.md  SELF-IMPROVING-AI-QUICKSTART.md  ULTRATHINK-2025-12-17.md  ULTRATHINK-COMPREHENSIVE-ANALYSIS.md  ULTRATHINK-COMPREHENSIVE-TASK-LIST-2025-12-18.md  ULTRATHINK-MASTER-TASK-LIST-2025-12-17.md  ULTRATHINK-STRATEGIC-ANALYSIS-2025-12-17.md  ULTRATHINK-UI-ANALYSIS-2025-12-17.md  autonomous-caretaker-architecture.md  hydra-bleeding-edge-research-dec2025.md  inference-optimization-research-dec2025.md  multi-agent-coding-integration-dec2025.md  (+3 more)
(+564 files in other folders)
