[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra-cluster"
version = "1.5.0"
description = "Hydra AI Cluster - Tools, Services, and Multi-Agent Orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shaun", email = "shaun@hydra.local" }
]
keywords = ["ai", "llm", "inference", "cluster", "homelab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
# Agent tools with LangChain integration
agents = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
]

# CrewAI multi-agent orchestration
crews = [
    "crewai>=0.28.0",
    "crewai-tools>=0.1.0",
]

# Voice interface (STT, TTS, wake word)
voice = [
    "faster-whisper>=0.9.0",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
    "websockets>=12.0",
]

# Search functionality
search = [
    "httpx>=0.25.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24.0",
]

# All optional dependencies
all = [
    "hydra-cluster[agents,crews,voice,search,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/shaun/hydra"
Documentation = "https://github.com/shaun/hydra/docs"
Repository = "https://github.com/shaun/hydra"

[project.scripts]
hydra = "hydra_cli.main:main"
hydra-model = "hydra_tools.cli.model:main"
hydra-health = "hydra_tools.cli.health:main"
hydra-reconcile = "hydra_reconcile.cli:main"
hydra-tools-api = "hydra_tools.api:main"
hydra-voice = "hydra_voice.main:app"
hydra-stt = "hydra_stt.main:app"
hydra-wakeword = "hydra_wakeword.main:app"
letta-import = "scripts.letta_import:main"

[project.entry-points."hydra.plugins"]
tools = "hydra_tools:__all__"
search = "hydra_search:__all__"

[tool.hatch.build.targets.wheel]
packages = [
    "src/hydra_tools",
    "src/hydra_search",
    "src/hydra_cli",
    "src/hydra_health",
    "src/hydra_alerts",
    "src/hydra_reconcile",
    "src/hydra_voice",
    "src/hydra_stt",
    "src/hydra_wakeword",
    "src/hydra_crews",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/config",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"scripts/*" = ["ARG"]     # unused arguments in scripts

[tool.ruff.lint.isort]
known-first-party = ["hydra_tools", "hydra_search", "hydra_cli", "hydra_health", "hydra_alerts", "hydra_reconcile", "hydra_voice", "hydra_stt", "hydra_wakeword", "hydra_crews"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
