[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra-mcp-server"
version = "1.0.0"
description = "MCP Server for Hydra Cluster integration with Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
]

[project.scripts]
hydra-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
